syntax = "proto3";
import "commontype/RouteMatcher.proto";

package commontype;

option java_multiple_files = true;
option java_package = "org.apache.bifromq.type";
option java_outer_classname = "MatchInfoProtos";

message MatchInfo {
  commontype.RouteMatcher matcher = 1;
  string receiverId = 2;
  uint64 incarnation = 3;
}
